--- a/app/src/main/res/layout/fragment_estrategia.xml
+++ b/app/src/main/res/layout/fragment_estrategia.xml
@@ -12,15 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:orientation="vertical">
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -30,7 +27,6 @@
                 android:layout_gravity="center"
                 android:textColor="@color/black"
                 />
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -40,7 +36,6 @@
                 android:layout_gravity="center"
                 android:textColor="#849095"
                 />
-
             <TextView
                 android:id="@+id/pregunta"
                 android:layout_width="match_parent"
@@ -49,29 +44,188 @@
                 android:layout_marginTop="15dp"
                 android:text="David ha pescado 44 peces anchovechas y 52 peces pejerrey. ¿Cuantos peces ha pescado en total?"
                 />
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="458dp"
-                android:weightSum="6"
+                android:layout_height="200dp"
                 android:layout_marginTop="35dp"
                 android:layout_gravity="center"
                 android:orientation="horizontal">
-
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:background="@drawable/pescador"/>
-
             </LinearLayout>
-
-
-
-
+        </LinearLayout>
+        <LinearLayout
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="5"
+            >
+            <EditText
+                android:layout_weight="1"
+                android:id="@+id/primero"
+                android:text="44"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center">
+                <EditText
+                    android:id="@+id/primero_"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:padding="10dp"
+                    android:background="@drawable/circle_transparente"
+                    android:textSize="25dp"/>
+            </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="40dp"
+                android:gravity="center"
+                android:text="+"/>
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center">
+                <EditText
+                    android:id="@+id/segundo_"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:padding="10dp"
+                    android:background="@drawable/circle_transparente"
+                    android:textSize="25dp"/>
+            </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text=""/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text=""/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="5"
+            >
+            <EditText
+                android:text="52"
+                android:layout_weight="1"
+                android:id="@+id/tercero"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center">
+                <EditText
+                    android:id="@+id/tercero_"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:padding="10dp"
+                    android:background="@drawable/circle_transparente"
+                    android:textSize="25dp"/>
+            </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="40dp"
+                android:gravity="center"
+                android:text="+"/>
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center">
+                <EditText
+                    android:id="@+id/cuarto_"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:padding="10dp"
+                    android:background="@drawable/circle_transparente"
+                    android:textSize="25dp"/>
+            </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text=""/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text=""/>
         </LinearLayout>
 
-    </LinearLayout>
 
+
+        <LinearLayout
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="5"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text=""/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text=""/>
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center">
+                <EditText
+                    android:id="@+id/resultado"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:padding="10dp"
+                    android:background="@drawable/circle_transparente"
+                    android:textSize="25dp"/>
+            </RelativeLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text=""/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text=""/>
+        </LinearLayout>
+
+
+
+    </LinearLayout>
     <Button
         android:id="@+id/validar"
         android:layout_width="match_parent"
@@ -85,6 +239,4 @@
         android:padding="0dp"
         android:text="Validar"
         android:textSize="20dp" />
-
-
 </RelativeLayout>
