--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -225,4 +225,10 @@
         android:label="@string/app_name"
         tools:layout="@layout/fragment_resultado" />
 
+    <fragment
+        android:id="@+id/nav_estrategia"
+        android:name="com.daniel.appmatematicas.view.fragmentos.EstrategiaFragment"
+        android:label="@string/app_name"
+        tools:layout="@layout/fragment_estrategia" />
+
 </navigation>
