--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -34,6 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textSize="30dp"
+            android:textColor="#1137EA"
             android:text="Módulo 1" />
 
 
@@ -44,6 +45,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textSize="30dp"
+            android:textColor="#1137EA"
+
             android:text="Módulo 2" />
 
 
@@ -52,7 +55,8 @@
         <!-- TODO: Update blank fragment layout -->
         <TextView
             android:id="@+id/modulo3"
-            android:layout_weight="1"
+            android:layout_weight="1"            android:textColor="#1137EA"
+
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textSize="30dp"
@@ -63,7 +67,8 @@
         <!-- TODO: Update blank fragment layout -->
         <TextView
             android:id="@+id/modulo4"
-            android:layout_weight="1"
+            android:layout_weight="1"            android:textColor="#1137EA"
+
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textSize="30dp"
@@ -76,7 +81,8 @@
             android:id="@+id/modulo5"
             android:layout_weight="1"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="match_parent"            android:textColor="#1137EA"
+
             android:textSize="30dp"
             android:text="Módulo Evaluación" />
 
@@ -87,6 +93,8 @@
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:textColor="#1137EA"
+
             android:textSize="80dp"
             android:text="■" />
 
@@ -97,6 +105,8 @@
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:textColor="#1137EA"
+
             android:textSize="30dp"
             android:text="Salir" />
 
