--- a/app/src/main/res/layout/fragment_calculadora_i_i.xml
+++ b/app/src/main/res/layout/fragment_calculadora_i_i.xml
@@ -6,11 +6,16 @@
     android:layout_height="wrap_content"
     android:id="@+id/container"
     tools:context=".view.ColorActivity">
-    <ImageView
-        android:id="@+id/cerrar"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:background="@drawable/com_facebook_close"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:gravity="right"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/cerrar"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/com_facebook_close"/>
+    </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
