--- a/app/src/main/res/layout/resta.xml
+++ b/app/src/main/res/layout/resta.xml
@@ -4,13 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/container"
-    tools:context=".BuscarNumeroActivity">
-    <ImageView
-        android:id="@+id/cerrar"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:background="@drawable/com_facebook_close"/>
+    android:id="@+id/container" >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:gravity="right"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/cerrar"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/com_facebook_close"/>
+    </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
