--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -225,6 +225,19 @@
         android:label="@string/app_name"
         tools:layout="@layout/fragment_resultado" />
 
+
+    <fragment
+        android:id="@+id/comparacionI"
+        android:name="com.daniel.appmatematicas.view.fragmentos.ComparacionIFragment"
+        android:label="@string/app_name"
+        tools:layout="@layout/fragment_comparacion_i" />
+
+    <fragment
+        android:id="@+id/comparacionII"
+        android:name="com.daniel.appmatematicas.view.fragmentos.ComparacionIIFragment"
+        android:label="@string/app_name"
+        tools:layout="@layout/fragment_comparacion_i_i" />
+
 <!--
 Iniciando menu 5
 -->
