--- a/app/src/main/res/layout/fragment_sumar_con_llevadas.xml
+++ b/app/src/main/res/layout/fragment_sumar_con_llevadas.xml
@@ -43,7 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:justificationMode="inter_word"
-                android:text="Sumar sin llevadas, vamos tu puedes."
+                android:text="Sumar con llevadas, vamos tu puedes."
                 android:textSize="17dp"
                 android:layout_gravity="center"
                 android:textColor="#849095"
