--- a/app/src/main/res/layout/fragment_peso.xml
+++ b/app/src/main/res/layout/fragment_peso.xml
@@ -59,7 +59,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="17dp"
                 android:layout_marginTop="15dp"
-                android:text="De los objetos que ves. Marca un objetos que crees que puedas cargar."
+                android:text="De los objetos que ves. Marca un objeto que crees que puedas cargar."
                 />
 
             <LinearLayout
