--- a/app/src/main/res/layout/fragment_calcular_i.xml
+++ b/app/src/main/res/layout/fragment_calcular_i.xml
@@ -60,7 +60,7 @@
                 android:textSize="17dp"
                 android:layout_marginTop="15dp"
                 android:textColor="#DA2222"
-                android:text="Nicolas tenia un billete de S/.100 y compro una camisa en S/.20 y un pantalón en S/.30."
+                android:text="Nicolas tenía un billete de S/. 100 y compró una camisa en S/. 20 y un pantalón en S/. 30."
                 />
 
             <TextView
