--- a/app/src/main/res/layout/fragment_raking.xml
+++ b/app/src/main/res/layout/fragment_raking.xml
@@ -6,11 +6,10 @@
     android:gravity="center"
     tools:context=".view.resultado.RakingFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="35dp"
-        android:text="Ranking no disponible" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/resultados_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 
 </RelativeLayout>
