--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -238,9 +238,18 @@
         android:label="@string/app_name"
         tools:layout="@layout/fragment_comparacion_i_i" />
 
-<!--
-Iniciando menu 5
--->
+
+    <fragment
+        android:id="@+id/nav_ranking"
+        android:name="com.daniel.appmatematicas.view.resultado.RakingFragment"
+        android:label="@string/app_name"
+        tools:layout="@layout/fragment_raking" />
+
+
+
+    <!--
+    Iniciando menu 5
+    -->
     <fragment
         android:id="@+id/nav_examen"
         android:name="com.daniel.appmatematicas.view.resultado.ExamenFragment"
