--- a/app/src/main/res/layout/fragment_resta_sin_llevadas.xml
+++ b/app/src/main/res/layout/fragment_resta_sin_llevadas.xml
@@ -284,6 +284,8 @@
         android:layout_height="wrap_content"
         android:gravity="right"
         android:layout_marginBottom="100dp"
+        android:visibility="gone"
+
         android:padding="5dp"
         android:orientation="horizontal">
         <TextView
