--- a/app/src/main/res/layout/resta.xml
+++ b/app/src/main/res/layout/resta.xml
@@ -283,6 +283,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="right"
+        android:visibility="gone"
+
         android:layout_marginBottom="100dp"
         android:padding="5dp"
         android:orientation="horizontal">
