--- a/app/src/main/res/layout/suma.xml
+++ b/app/src/main/res/layout/suma.xml
@@ -330,6 +330,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="right"
+        android:visibility="gone"
         android:layout_marginBottom="100dp"
         android:padding="5dp"
         android:orientation="horizontal">
