--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -388,5 +388,11 @@
         android:label="@string/app_name"
         tools:layout="@layout/fragment_sumar_con_llevadas" />
 
+    <fragment
+        android:id="@+id/nav_motivacion"
+        android:name="com.daniel.appmatematicas.view.fragmentos.examen.MotivacionFragment"
+        android:label="@string/app_name"
+        tools:layout="@layout/fragment_motivacion" />
+
 
 </navigation>
