--- a/app/src/main/res/layout/fragment_peso.xml
+++ b/app/src/main/res/layout/fragment_peso.xml
@@ -86,24 +86,7 @@
                 android:layout_marginTop="30dp"
                 android:orientation="horizontal">
 
-                <RelativeLayout
-                    android:id="@+id/seleccion_primero"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:padding="10dp"
-                    android:gravity="center">
-                    <TextView
-                        android:id="@+id/primero"
-                        android:layout_width="match_parent"
-                        android:layout_height="150dp"
-                        android:textColor="@color/black"
-                        android:padding="10dp"
-                        android:gravity="center"
-                        android:background="@drawable/estante"
-                        android:textSize="18dp"/>
 
-                </RelativeLayout>
                 <RelativeLayout
                     android:id="@+id/seleccion_segundo"
                     android:layout_weight="1"
@@ -122,7 +105,25 @@
                         android:textSize="18dp"/>
 
                 </RelativeLayout>
+                <RelativeLayout
+                    android:id="@+id/seleccion_cuarto"
+                    android:layout_weight="1"
+                    android:padding="10dp"
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center">
+                    <TextView
+                        android:id="@+id/cuarto"
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        android:textColor="@color/black"
+                        android:gravity="center"
 
+                        android:background="@drawable/teclado"
+                        android:textSize="18dp"/>
+
+                </RelativeLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -150,24 +151,26 @@
                         android:textSize="18dp"/>
 
                 </RelativeLayout>
+
                 <RelativeLayout
-                    android:id="@+id/seleccion_cuarto"
-                    android:layout_weight="1"
-                    android:padding="10dp"
+                    android:id="@+id/seleccion_primero"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:padding="10dp"
                     android:gravity="center">
                     <TextView
-                        android:id="@+id/cuarto"
+                        android:id="@+id/primero"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
                         android:textColor="@color/black"
+                        android:padding="10dp"
                         android:gravity="center"
-
-                        android:background="@drawable/teclado"
+                        android:background="@drawable/estante"
                         android:textSize="18dp"/>
 
                 </RelativeLayout>
+
 
             </LinearLayout>
 
