--- a/app/src/main/res/layout/contar.xml
+++ b/app/src/main/res/layout/contar.xml
@@ -60,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="17dp"
                 android:layout_marginTop="15dp"
-                android:text="¿Cuántos dulces tiene Nicolas?"
+                android:text="¿Cuántos dulces tiene Nicolás?"
                 />
 
 
