--- a/app/src/main/res/layout/fragment_comparaciones.xml
+++ b/app/src/main/res/layout/fragment_comparaciones.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+                       <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -22,11 +22,22 @@
         android:orientation="vertical">
 
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:justificationMode="inter_word"
+            android:text="Completa la expresión númerica"
+            android:textSize="17dp"
+            android:layout_gravity="center"
+            android:textColor="#849095"
+            />
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="20dp"
+            android:layout_marginTop="20dp"
             android:paddingRight="20dp"
             android:orientation="vertical">
 
@@ -41,17 +52,6 @@
                 android:textColor="@color/black"
                 />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:justificationMode="inter_word"
-                android:text="Completa la expresión númerica"
-                android:textSize="17dp"
-                android:layout_gravity="center"
-                android:textColor="#849095"
-                />
-
-
 
 
 
@@ -62,7 +62,7 @@
                 android:textSize="17dp"
                 android:layout_marginTop="15dp"
                 android:textColor="#DA2222"
-                android:text="¿Nicolas, Valentina y Nina cuentan su propina en el recreo?"
+                android:text="¿Nicolás, Valentina y Nina cuentan su propina en el recreo?"
                 />
 
 
