--- a/app/src/main/res/layout/fragment_estrategia.xml
+++ b/app/src/main/res/layout/fragment_estrategia.xml
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="17dp"
                 android:layout_marginTop="15dp"
-                android:text="David ha pescado 60 peces anchovechas y 40 peces pejerrey. ¿Cuantos peces ha pescado en total?"
+                android:text="David ha pescado 60 peces anchovechas y 40 peces pejerrey. ¿Cuántos peces ha pescado en total?"
                 />
             <LinearLayout
                 android:layout_width="match_parent"
@@ -78,7 +78,6 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
                     android:padding="10dp"
-                    android:background="@drawable/circle_transparente"
                     android:textSize="25dp"/>
             </RelativeLayout>
             <TextView
@@ -99,7 +98,6 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
                     android:padding="10dp"
-                    android:background="@drawable/circle_transparente"
                     android:textSize="25dp"/>
             </RelativeLayout>
             <TextView
@@ -138,7 +136,6 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
                     android:padding="10dp"
-                    android:background="@drawable/circle_transparente"
                     android:textSize="25dp"/>
             </RelativeLayout>
             <TextView
@@ -159,7 +156,6 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
                     android:padding="10dp"
-                    android:background="@drawable/circle_transparente"
                     android:textSize="25dp"/>
             </RelativeLayout>
             <TextView
@@ -204,7 +200,6 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
                     android:padding="10dp"
-                    android:background="@drawable/circle_transparente"
                     android:textSize="25dp"/>
             </RelativeLayout>
 
