--- a/app/src/main/res/layout/fragment_resultado.xml
+++ b/app/src/main/res/layout/fragment_resultado.xml
@@ -17,7 +17,7 @@
         android:gravity="center"
         android:textColor="#35B342"
         android:textSize="25dp"
-        android:text="ERES INCREIBLE, LOGRASTE" />
+        android:text="ERES INCREÍBLE, LOGRASTE" />
 
 
     <TextView
@@ -34,6 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:visibility="gone"
         android:textColor="#35B342"
         android:textSize="25dp"
         android:text="ERES INCREIBLE, LOGRASTE" />
