--- a/app/src/main/res/layout/fragment_modulo_i.xml
+++ b/app/src/main/res/layout/fragment_modulo_i.xml
@@ -56,7 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Repsentando números."
+            android:text="Representando números."
             android:textColor="#255CE6"
             android:textSize="20dp"
             />
